# claude-code-orchestrator

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .tidyignore  ARCHITECTURE.md  CHANGELOG.md  CHATGPT_STARTER_PROMPT.md  CLAUDE.md  CLAUDE_API_STATUS.md  CODEOWNERS  DEPLOYMENT_APP_RUNNER.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_VALIDATION.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  Dockerfile  GITHUB_DEPLOYMENT_SUMMARY.md  INTAKE_INTEGRATION_PLAN.md  MANUAL_DEPLOYMENT_GUIDE.md  Makefile  ORCHESTRATOR_ARCHITECTURE_ANALYSIS.md  ORCHESTRATOR_QUICK_REFERENCE.md  PROMPT_10A_IMPLEMENTATION_STATUS.md  PROMPT_10A_PHASE2_COMPLETION.md  PROMPT_10A_PHASE3_D3_OVERLAY_COMPLETION.md  PROMPT_10A_PHASE4_COMPLETION.md  PROMPT_10A_PHASE4_CONTINUATION.md  PROMPT_10A_QC_REPORT.md  PROMPT_12_COMPLETION_REPORT.md  PROMPT_12_QC_PROOF.md  PROMPT_13B_COMPLETION_REPORT.md  PROMPT_13_IMPLEMENTATION_STATUS.md  PROMPT_14_LIFE_COMPLETION_REPORT.md  PROMPT_4T_COMPLETION_REPORT.md  PROMPT_5_COMPLETION_REPORT.md  PROMPT_6_COMPLETION_REPORT.md  PROMPT_7_COMPLETION_REPORT.md  PROMPT_8_COMPLETION_REPORT.md  PROMPT_9C_CLIENT_THEMING_COMPLETION.md  (+19 more)
.claude/: config.product_trinity.yaml  config.yaml  orchestrator_state.json
.claude/agents/: architect.md  consensus.md  database-architect.md  qa.md  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  template-config.yaml
_archive/: README.md
backups/: 2025-10-15_120719_tidyignore.bak  README.md  app.py.20251015_101242  app.py.security_20251015_104902  ci_20251014_215459.yml  config_$(date +%Y%m%d_%H%M%S).yaml  config_20251014_212453.yaml  config_20251014_214629.yaml  config_20251014_215618.yaml  config_20251014_220641.yaml  config_20251014_222105.yaml  hygiene_20251014_213930.yaml
clients/: README.md
config/: default.yaml
configs/: cache.yaml  flags.yaml  governance.yaml  hygiene.yaml  lifecycle.yaml  security.yaml
datasets/: catalog.json
design_system/: palettes.json  tokens.json
docs/: AI_CODE_REVIEW_SETUP.md  API_MINIMUM.md  CLAUDE_API_INTEGRATION.md  DESIGN_SYSTEM_AUDIT.md  EMAIL_NOTIFICATION_SETUP.md  GOLDEN_PATH.md  LLM_INTEGRATION.md  LLM_PROVIDERS.md  METHODOLOGY.md  METRICS_DASHBOARD_GUIDE.md  METRICS_EXPORT_GUIDE.md  MIGRATION.md  MODEL_AND_BUDGETING.md  ORCHESTRATOR_OVERVIEW.html  ORCHESTRATOR_OVERVIEW.md  QUICKSTART.md  RSC_AGENT_EXECUTION.md  RSC_CONSOLE_COMMANDS.md  RSC_DEPLOYMENT_GUIDE.md  RSC_LAUNCHPAD.md  RSC_MULTI_CAPABILITY.md  RSC_ORCHESTRATION_PROFILES.md  RSC_ORCHESTRATION_STATUS.md  RSC_PHASE_DIAGNOSTICS.md  RSC_PLANNING_PIPELINE.md  RSC_SPRINT5_NOTES.md  RSC_SPRINT7_STATUS.md  RSC_TEMPLATE_CATALOG.md  RSC_UI_TEST_PLAYBOOK.md  RSC_USER_GUIDE.md  SELF_HARDENING_RUNBOOK.md  USER_AUTHENTICATION.md  WORKFLOW.md  bootstrap.md  constitution.md  design_system.md  github_amplify_setup.md  intake.md  intake_clarification.md  kds_asset_inventory.md  (+10 more)
intake/: README.md
notebooks/: 00_exploration.ipynb
orchestrator_v2/: __init__.py  main.py
rsg-ui/: .env.example  README.md  amplify.yml  index.html  package-lock.json  package.json  railway.json  vite-env.d.ts
scripts/: brand_guard_docs.py  dead_code_report.py  export_overview_pdf.py  export_overview_pdf.ts  export_pdfs.ts  gen_cli_docs.py  gen_openapi_docs.py  generate_cleanliness_badge.py  generate_html_email.py  generate_metrics_report.py  gov_weekly_report.py  hygiene_glue.py  hygiene_trend.py  merge_theme.py  notebook_sanitizer.py  render_hygiene_trend.py  run_api_server.py  run_workflow_test.py  scan_repo.py  sync_tokens_for_docs.py  test_agent_runtime.py  test_end_to_end_workspace_engine.py  test_llm_agents.py  test_orchestrator_v2.py  test_parallel_model_budget.py  test_persistence_api.py  test_rsg_service.py  test_skills_tools_governance.py  test_workspace_manager.py  validate_kds_colors.py  verify_api_key.py
site/: amplify.yml  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
src/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_config.py  test_constitution.py  test_data_ingest.py  test_intake_api.py  test_intake_clarifier.py  test_intake_service.py  test_intake_validation.py  test_kds_preflight_and_registry.py  test_kds_tokens.py  test_packaging.py  test_parallel_execution.py  test_release_system.py  test_runs_api.py  test_train.py  test_transforms.py
(+571 files in other folders)
